tests/machine/x/cpp/membership.mochi.error
line 14: ../../../tests/machine/x/cpp/membership.mochi.cpp:14:33: error: exponent has no digits
   14 |     print((std::find(2.begin(), 2.end(), nums) != 2.end()));
      |                                 ^~~~~
../../../tests/machine/x/cpp/membership.mochi.cpp:14:51: error: exponent has no digits
   14 |     print((std::find(2.begin(), 2.end(), nums) != 2.end()));
      |                                                   ^~~~~
../../../tests/machine/x/cpp/membership.mochi.cpp:15:33: error: exponent has no digits
   15 |     print((std::find(4.begin(), 4.end(), nums) != 4.end()));
      |                                 ^~~~~
../../../tests/machine/x/cpp/membership.mochi.cpp:15:51: error: exponent has no digits
   15 |     print((std::find(4.begin(), 4.end(), nums) != 4.end()));
      |                                                   ^~~~~
../../../tests/machine/x/cpp/membership.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/membership.mochi.cpp:14:22: error: unable to find numeric literal operator ‘operator""begin’
   14 |     print((std::find(2.begin(), 2.end(), nums) != 2.end()));
      |                      ^~~~~~~
../../../tests/machine/x/cpp/membership.mochi.cpp:14:22: note: use ‘-fext-numeric-literals’ to enable more built-in suffixes
../../../tests/machine/x/cpp/membership.mochi.cpp:15:22: error: unable to find numeric literal operator ‘operator""begin’
   15 |     print((std::find(4.begin(), 4.end(), nums) != 4.end()));
      |                      ^~~~~~~
../../../tests/machine/x/cpp/membership.mochi.cpp:15:22: note: use ‘-fext-numeric-literals’ to enable more built-in suffixes

 13 |     auto nums = std::vector<int>{1, 2, 3};
 14 |     print((std::find(2.begin(), 2.end(), nums) != 2.end()));
 15 |     print((std::find(4.begin(), 4.end(), nums) != 4.end()));
